Version 7.9.9

2002-06-24  Kjetil Jacobsen  <kjetilja>

	* Added example code on how to upload a file using HTTPPOST in
	pycurl (code by Amit Mongia <amit_mongia@hotmail.com>).  See the
	file 'test_fileupload.py' for details.
	
Version 7.9.8

2002-06-24  Kjetil Jacobsen  <kjetilja>

	* Resolved some build problems on Windows (by Markus Oberhumer).

2002-06-19  Kjetil Jacobsen  <kjetilja>

	* Added CURLOPT_CAPATH.

	* Added option constants for CURLOPT_NETRC: CURL_NETRC_OPTIONAL,
	CURL_NETRC_IGNORED and CURL_NETRC_REQUIRED.

	* Added option constants for CURLOPT_TIMECONDITION:
	TIMECOND_IFMODSINCE and TIMECOND_IFUNMODSINCE.

	* Added an simple example crawler, which downloads documents
	listed in a file with a configurable number of worker threads.
	See the file 'crawler.py' in the 'tests' directory for details.

	* Removed the redundant 'test_xmlrpc2.py' test script.
	
 	* Disallow recursive callback invocations (by Markus Oberhumer).

2002-06-18  Kjetil Jacobsen  <kjetilja>

	* Made some changes to setup.py which should fix the build
	problems on RedHat 7.3 (suggested by Benji <benji@kioza.net>).
	
	* Use CURLOPT_READDATA instead of CURLOPT_INFILE, and
	CURLOPT_WRITEDATA instead of CURLOPT_FILE.  Also fixed some
	reference counting bugs with file objects.
	
	* CURLOPT_FILETIME and CURLINFO_FILETIME had a namespace clash
	which caused them not to work.  Use OPT_FILETIME for setopt() and
	INFO_FILETIME for getinfo().  See example usage in
	'test_getinfo.py' for details.

Version 7.9.7
	
2002-05-20  Kjetil Jacobsen  <kjetilja>

	* New versioning scheme.  Pycurl now has the same version number
	as the libcurl version it was built with.  The pycurl version
	number thus indicates which version of libcurl is required to run.

Version 0.4.10 (Not released)

2002-05-17  Kjetil Jacobsen  <kjetilja>

	* Added CURLINFO_REDIRECT_TIME and CURLINFO_REDIRECT_COUNT.

2002-04-27  Kjetil Jacobsen  <kjetilja>

	* Fixed potential memory leak and thread race (by Markus
	Oberhumer)
